# ARC-AGI-3-Wayfinder-Agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
agents/: __init__.py
agents/wayfinder/: __init__.py  action_head.py  agent.py  cli.py  intrinsic_reward.py  memory_graph.py  perception.py  planner.py  world_model.py
eval/: metrics.py  run_local_eval.py
notebooks/: kaggle_submission.ipynb
tests/: __init__.py  test_action_head.py  test_agent.py  test_intrinsic_reward.py  test_memory_graph.py  test_perception.py  test_planner.py  test_world_model.py
training/: replay_buffer.py  train_world_model.py
training/configs/: default.yaml
