[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc-agi-3-wayfinder"
version = "0.1.0"
description = "ARC Prize 2026 — ARC-AGI-3 track competition agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Wayfinder Team" }]
keywords = ["arc-agi", "reinforcement-learning", "game-ai"]

dependencies = [
    "arc-agi-3>=0.9.0",
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
training = [
    "wandb>=0.17.0",
    "tensorboard>=2.16.0",
]

[project.scripts]
wayfinder = "agents.wayfinder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["agents", "training", "eval", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "training", "eval"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring the SDK environment",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "arc_agi_3.*"
ignore_missing_imports = true
